<resources>
    <string name="app_name">Transpire</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Transpire</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="map">Map</string>
    <string name="rate">Rate Finder</string>
    <string name="traffic">Traffic Rules</string>
    <string name="services">Services</string>
    <string name="about">About</string>


    <!--
    TODO: Before you run your application, you need a Google Maps API key.

    To get one, follow this link, follow the directions and press "Create" at the end:

    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=88:BC:DC:39:59:78:C4:4F:D7:D6:1D:C7:77:68:07:1C:3B:C7:59:A4%3Bcom.trans.transpire

    You can also add your credentials to an existing key, using these values:

    Package name:
    88:BC:DC:39:59:78:C4:4F:D7:D6:1D:C7:77:68:07:1C:3B:C7:59:A4

    SHA-1 certificate fingerprint:
    88:BC:DC:39:59:78:C4:4F:D7:D6:1D:C7:77:68:07:1C:3B:C7:59:A4

    Alternatively, follow the directions here:
    https://developers.google.com/maps/documentation/android/start#get-key

    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
    string in this file.
    -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDAczgaCJmmDglOeDslfc4-kZpLxrqXPy8</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Map</item>
        <item>Rate Finder</item>
        <item>Traffic Rules</item>
        <item>Services</item>
        <item>About</item>
    </string-array>
</resources>
