<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/map" />
        <item
            android:id="@+id/rate_finder"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/rate" />
        <item
            android:id="@+id/traffic_rules"
            android:icon="@drawable/ic_cancel_black_24dp"
            android:title="@string/traffic" />
        <item
            android:id="@+id/services"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/services" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
